Editing the countdown content to add "remaining!" to the end of the phrase

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <!-- JS Countdown to the end of the style -->
       <div id="countdown" class="hidden">
-        <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
+        <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p><p>remaining!</p>
       </div>
 
         <div class="grid-container">
