--- a/style-guide.html
+++ b/style-guide.html
@@ -618,12 +618,12 @@
 
             <h4>Sample code:</h4>
             <code>&lt;div id="countdown" class="hidden"&gt;<br/>
-              <span class="indent">&lt;p class="days"&gt;00&lt;/p&gt;&lt;p class="timeRefDays"&gt;days&lt;/p&gt;&lt;p class="hours"&gt;00&lt;/p&gt;&lt;p class="timeRefHours"&gt;hours&lt;/p&gt;&lt;p class="minutes"&gt;00&lt;/p&gt;&lt;p class="timeRefMinutes"&gt;minutes&lt;/p&gt;&lt;p class="seconds"&gt;00&lt;/p&gt;&lt;p class="timeRefSeconds"&gt;seconds&lt;/p&gt;</span><br/>
+              <span class="indent">&lt;p class="days"&gt;00&lt;/p&gt;&lt;p class="timeRefDays"&gt;days&lt;/p&gt;&lt;p class="hours"&gt;00&lt;/p&gt;&lt;p class="timeRefHours"&gt;hours&lt;/p&gt;&lt;p class="minutes"&gt;00&lt;/p&gt;&lt;p class="timeRefMinutes"&gt;minutes&lt;/p&gt;&lt;p class="seconds"&gt;00&lt;/p&gt;&lt;p class="timeRefSeconds"&gt;seconds&lt;/p&gt;&lt;p&gt;remaining!&lt;/p&gt;</span><br/>
             &lt;/div&gt;</code>
 
             <h4>Rendered element:</h4>
             <div id="countdown" class="hidden">
-              <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
+              <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p><p>remaining!</p>
             </div>
 
             <h4>Note on code:</h4>
