fix the error on check out page <div> can not be a child in <dl>

--- a/checkout.html
+++ b/checkout.html
@@ -39,24 +39,24 @@
           <h3>Bike T-Shirt</h3>
           <div class="cart-item-box">
             <img class="img-cart-view" src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
-            <dl class="container">
-              <div class="container-item">
+            <div class="container">
+              <dl class="container-item">
                 <dt>Colour</dt>
                 <dd>Blue</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Size</dt>
                 <dd>XS</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Quantity</dt>
                 <dd>1</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Price</dt>
                 <dd>$29.99</dd>
-              </div>
-            </dl>
+              </dl>
+            </div>
           </div>
           <a class="button edit" href="current-item-bike.html">Edit</a>
           <a class="button delete" href="">Delete</a>
@@ -66,24 +66,24 @@
           <h3>Mountain T-Shirt</h3>
           <div class="cart-item-box">
             <img class="img-cart-view" src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
-            <dl class="container">
-              <div class="container-item">
+            <div class="container">
+              <dl class="container-item">
                 <dt>Colour</dt>
                 <dd>Green</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Size</dt>
                 <dd>XS</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Quantity</dt>
                 <dd>1</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Price</dt>
                 <dd>$29.99</dd>
-              </div>
-            </dl>
+              </dl>
+            </div>
           </div>
           <a class="button edit" href="current-item-mountain.html">Edit</a>
           <a class="button delete" href="">Delete</a>
@@ -93,24 +93,24 @@
           <h3>Picnic T-Shirt</h3>
           <div class="cart-item-box">
             <img class="img-cart-view" src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
-            <dl class="container">
-              <div class="container-item">
+            <div class="container">
+              <dl class="container-item">
                 <dt>Colour</dt>
                 <dd>Yellow</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Size</dt>
                 <dd>XS</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Quantity</dt>
                 <dd>1</dd>
-              </div>
-              <div class="container-item">
+              </dl>
+              <dl class="container-item">
                 <dt>Price</dt>
                 <dd>$29.99</dd>
-              </div>
-            </dl>
+              </dl>
+            </div>
           </div>
           <a class="button edit" href="current-item-bike.html">Edit</a>
           <a class="button delete" href="">Delete</a>
