fix id duplicated issue on check out page

--- a/checkout.html
+++ b/checkout.html
@@ -144,7 +144,7 @@
               <label class="textfield-label" for="input-province">Province</label>
               <input type="text" class="textfield" placeholder="Province" id="input-province">
               <label class="textfield-label" for="input-postal-code">Postal Code</label>
-              <input type="text" class="textfield" placeholder="Address" id="input-address">
+              <input type="text" class="textfield" placeholder="Address" id="input-postal-code">
               <label class="textfield-label" for="input-email">Email Address (Optional)</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email">
               <label class="textfield-label" for="input-phone">Phone Number (Optional)</label>
@@ -167,7 +167,7 @@
               <label class="textfield-label" for="input-province-billing">Province</label>
               <input type="text" class="textfield" placeholder="Province" id="input-province-billing">
               <label class="textfield-label" for="input-postal-code-billing">Postal Code</label>
-              <input type="text" class="textfield" placeholder="Address" id="input-address-billing">
+              <input type="text" class="textfield" placeholder="Address" id="input-postal-code-billing">
               <label class="textfield-label" for="input-email-billing">Email Address (Optional)</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email-billing">
               <label class="textfield-label" for="input-phone-billing">Phone Number (Optional)</label>
