fix the error on citation page close all the <span> tags

--- a/citations.html
+++ b/citations.html
@@ -33,15 +33,14 @@
       <!-- // About the Citations -->
 
       <!-- // OTHER PAGES SECTION -->          
-      <section id="other_pages">
-        <h2 class="subheading">Other Pages</h2>
-        <section>
+      <section>
+        <h2 id="other_pages" class="subheading">Other Pages</h2>
           <ul>
             <li><span class="listitem"><a href="style-guide.html">Style Guide</a></span></li>
             <li><span class="listitem"><a href="index.html">Site Homepage</a></span></li>
           </ul>
         </section>
-      </section>
+      
       <!-- // OTHER PAGES SECTION -->        
 
       <!-- // FONTS SECTION -->
@@ -69,19 +68,19 @@
 
         <ul class="citations">
           <li>
-            <span class="listitem"><cite>(n.d.)</cite>. Retrieved from <a href="http://www.binarytradingforum.com/core/image.php?userid=27&dateline=1355305878">http://www.binarytradingforum.com/core/image.php?userid=27&dateline=1355305878</a>.
+            <span class="listitem"><cite>(n.d.)</cite>. Retrieved from <a href="http://www.binarytradingforum.com/core/image.php?userid=27&amp;dateline=1355305878">http://www.binarytradingforum.com/core/image.php?userid=27&amp;dateline=1355305878</a>.</span>
           </li>
           <li>
             <span class="listitem"><cite>Chang, Flora</cite>. Artist. (n.d.). <strong>[No Title]</strong> [Illustration]. Retrieved from <a href="http://happydoodleland.com/limited-color-illustrations/plu84bw6paspf4fuvjj1h1ke45qpv6">http://happydoodleland.com/limited-color-illustrations/plu84bw6paspf4fuvjj1h1ke45qpv6</a>.</span>
           </li>
           <li>
-            <span class="listitem"><cite>Rschen7754</cite>. Uploader. (n.d.). <strong>Matt O'Connor Profile</strong> [Photograph]. Retrieved from <a href="https://commons.wikimedia.org/wiki/File:Matt_O%27Connor_Profile.jpg">https://commons.wikimedia.org/wiki/File:Matt_O%27Connor_Profile.jpg</a>.
+            <span class="listitem"><cite>Rschen7754</cite>. Uploader. (n.d.). <strong>Matt O'Connor Profile</strong> [Photograph]. Retrieved from <a href="https://commons.wikimedia.org/wiki/File:Matt_O%27Connor_Profile.jpg">https://commons.wikimedia.org/wiki/File:Matt_O%27Connor_Profile.jpg</a>.</span>
           </li>
           <li>
-            <span class="listitem"><cite>Search for free cliparts to download</cite>. (n.d.). Retrieved from <a href="http://www.cliparts.co">http://www.cliparts.co</a>.
+            <span class="listitem"><cite>Search for free cliparts to download</cite>. (n.d.). Retrieved from <a href="http://www.cliparts.co">http://www.cliparts.co</a>.</span>
           </li>
           <li>
-            <span class="listitem"><cite>The Do's and Don'ts for Taking the Perfect LinkedIn Profile Picture</cite>. (n.d.). From <a href="https://assets.entrepreneur.com/content/16x9/822/20150406145944-dos-donts-taking-perfect-linkedin-profile-picture-selfie-mobile-camera-2.jpeg">https://assets.entrepreneur.com/content/16x9/822/20150406145944-dos-donts-taking-perfect-linkedin-profile-picture-selfie-mobile-camera-2.jpeg</a>.
+            <span class="listitem"><cite>The Do's and Don'ts for Taking the Perfect LinkedIn Profile Picture</cite>. (n.d.). From <a href="https://assets.entrepreneur.com/content/16x9/822/20150406145944-dos-donts-taking-perfect-linkedin-profile-picture-selfie-mobile-camera-2.jpeg">https://assets.entrepreneur.com/content/16x9/822/20150406145944-dos-donts-taking-perfect-linkedin-profile-picture-selfie-mobile-camera-2.jpeg</a>.</span>
           </li>
         </ul>
       </section>
