fix the error on bike page change line 119 id ="select-quantity" to id="input-rating"

--- a/current-item-bike.html
+++ b/current-item-bike.html
@@ -116,7 +116,7 @@
               <label class="textfield-label" for="input-email">Email Address</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email">
               <label class="textfield-label" for="input-rating">Rating (Out of 5)</label>
-              <select id="select-quantity" class="textfield">
+              <select id="input-rating" class="textfield">
                 <option value="5">5</option>
                 <option value="4">4</option>
                 <option value="3">3</option>
