fix the error on index page <figure> can not contain <div> <a> can not contain <figcaption>

--- a/index.html
+++ b/index.html
@@ -54,33 +54,47 @@
       </div>
 
         <div class="grid-container">
-          <figure class="col-1of3"><a href="current-item-bike.html">
-            <div class="product-listing">
-              <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
+          <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="current-item-bike.html">
+                <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Bike T-Shirt</p>
-                <p class="product-price">$29.99</p>
+                <a href="current-item-bike.html">
+                  <p class="product-name">Bike T-Shirt</p>
+                  <p class="product-price">$29.99</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
-          <figure class="col-1of3"><a href="current-item-mountain.html">
-            <div class="product-listing">
-              <img src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
+            </figure>
+          </div>
+
+          <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="current-item-mountain.html">
+                <img src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Mountain T-Shirt</p>
-                <p class="product-price">$29.99</p>
+                <a href="current-item-mountain.html">
+                  <p class="product-name">Mountain T-Shirt</p>
+                  <p class="product-price">$29.99</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
-          <figure class="col-1of3"><a href="current-item-bike.html">
-            <div class="product-listing">
-              <img src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
+            </figure>
+          </div>
+
+           <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="current-item-bike.html">
+                <img src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Picnic T-Shirt</p>
-                <p class="product-price">$29.99</p>
+                <a href="current-item-bike.html">
+                  <p class="product-name">Picnic T-Shirt</p>
+                  <p class="product-price">$29.99</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
+            </figure>
+          </div>
         </div>
         <a class="button more-info" href="current-styles.html">More Current Styles</a>
       </section>
@@ -92,33 +106,47 @@
       <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
 
         <div class="grid-container">
-          <figure class="col-1of3"><a href="discontinued-item-box.html">
-            <div class="product-listing">
-              <img src="img/tshirt-box.png" alt="Black t-shirt with a gift box on the front.">
+          <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="discontinued-item-box.html">
+                <img src="img/tshirt-box.png" alt="Black t-shirt with a gift box on the front.">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Gift Box T-Shirt</p>
-                <p class="product-date">September 2015</p>
+                <a href="discontinued-item-box.html">
+                  <p class="product-name">Gift Box T-Shirt</p>
+                  <p class="product-date">September 2015</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
-          <figure class="col-1of3"><a href="discontinued-item-balloon.html">
-            <div class="product-listing">
-              <img src="img/tshirt-balloon.png" alt="Purple t-shirt with a balloon on the front. ">
+            </figure>
+          </div>
+
+          <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="discontinued-item-balloon.html">
+                <img src="img/tshirt-balloon.png" alt="Purple t-shirt with a balloon on the front. ">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Balloon T-Shirt</p>
-                <p class="product-date">September 2015</p>
+                <a href="discontinued-item-balloon.html">
+                  <p class="product-name">Balloon T-Shirt</p>
+                  <p class="product-date">September 2015</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
-          <figure class="col-1of3"><a href="discontinued-item-box.html">
-            <div class="product-listing">
-              <img src="img/tshirt-cake.png" alt="White t-shirt with a cake on the front.">
+            </figure>
+          </div>
+
+          <div class="product-listing">
+            <figure class="col-1of3">
+              <a href="discontinued-item-balloon.html">
+                <img src="img/tshirt-cake.png" alt="White t-shirt with a cake on the front.">
+              </a>
               <figcaption class="product-info">
-                <p class="product-name">Cake T-Shirt</p>
-                <p class="product-date">August 2015</p>
+                <a href="discontinued-item-balloon.html">
+                  <p class="product-name">Cake T-Shirt</p>
+                  <p class="product-date">August 2015</p>
+                </a>
               </figcaption>
-            </div></a>
-          </figure>
+            </figure>
+          </div>
         </div>
         <a class="button more-info" href="discontinued-styles.html">More Discontinued Styles</a>
       </section>
