change the layout problem caused by the figure and div error

--- a/style-guide.html
+++ b/style-guide.html
@@ -360,8 +360,8 @@
 
           <h4>Rendered element:</h4>
           <div class="grid-container">
-            <div class="product-listing">
-              <figure class="col-1of3">
+            <div class="col-1of3">
+              <figure class="product-listing">
                 <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
                 <figcaption class="product-info">
                   <p class="product-name">Bike T-Shirt</p>
@@ -370,8 +370,8 @@
               </figure>
             </div>
 
-            <div class="product-listing">
-              <figure class="col-1of3">
+            <div class="col-1of3">
+              <figure class="product-listing">
                 <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
                 <figcaption class="product-info">
                   <p class="product-name">Mountain T-Shirt</p>
@@ -380,8 +380,8 @@
               </figure>
             </div>
 
-            <div class="product-listing">
-              <figure class="col-1of3">
+            <div class="col-1of3">
+              <figure class="product-listing">
                 <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
                 <figcaption class="product-info">
                   <p class="product-name">Picnic T-Shirt</p>
