change the layout for all pages contain the product lists

--- a/discontinued-styles.html
+++ b/discontinued-styles.html
@@ -37,8 +37,8 @@
       <!-- Discontinued Styles -->
       
         <div class="grid-container">
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
               </a>
@@ -51,8 +51,8 @@
             </figure>
           </div>
           
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-balloon.html">
                 <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
               </a>
@@ -65,8 +65,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
               </a>
@@ -81,8 +81,8 @@
         </div>
 
         <div class="grid-container">
-         <div class="product-listing">
-            <figure class="col-1of3">
+         <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-xmastree.png" alt="T-shirt with Xmas trees on the front.">
               </a>
@@ -95,8 +95,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-cupcake.png" alt="T-shirt with a cupcake on the front.">
               </a>
@@ -109,8 +109,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-paper.png" alt="T-shirt with two falling children on the front.">
               </a>
