--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       </div>
 
         <div class="grid-container">
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
               </a>
@@ -68,8 +68,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-mountain.html">
                 <img src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
               </a>
@@ -82,8 +82,8 @@
             </figure>
           </div>
 
-           <div class="product-listing">
-            <figure class="col-1of3">
+           <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
               </a>
@@ -106,8 +106,8 @@
       <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
 
         <div class="grid-container">
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-box.html">
                 <img src="img/tshirt-box.png" alt="Black t-shirt with a gift box on the front.">
               </a>
@@ -120,8 +120,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-balloon.html">
                 <img src="img/tshirt-balloon.png" alt="Purple t-shirt with a balloon on the front. ">
               </a>
@@ -134,8 +134,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="discontinued-item-balloon.html">
                 <img src="img/tshirt-cake.png" alt="White t-shirt with a cake on the front.">
               </a>
