--- a/current-styles.html
+++ b/current-styles.html
@@ -41,8 +41,8 @@
      
         
         <div class="grid-container">
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-bike.png" alt="Blue t-shirt with a bike on the front. The bike has people standing on its seat.">
               </a>
@@ -55,8 +55,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">  
-            <figure class="col-1of3">
+          <div class="col-1of3">  
+            <figure class="product-listing">
               <a href="current-item-mountain.html">
                 <img src="img/tshirt-mountain.png" alt="Green t-shirt with two mountains on the front. The tall mountain is thinking about food.">
               </a>
@@ -69,8 +69,8 @@
             </figure>
           </div>
 
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-picnic.png" alt="Yellow t-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
               </a>
@@ -85,8 +85,8 @@
         </div>
 
         <div class="grid-container">
-          <div class="product-listing">
-            <figure class="col-1of3">
+          <div class="col-1of3" >
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-trees.png" alt="Yellow t-shirt with walking trees on the front.">
               </a>
@@ -99,8 +99,8 @@
             </figure>
           </div>
 
-         <div class="product-listing">
-            <figure class="col-1of3">
+         <div class="col-1of3" >
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-ufo.png" alt="Purple t-shirt with a UFO abducting a man on the front.">
               </a>
@@ -113,8 +113,8 @@
             </figure>
           </div>
 
-         <div class="product-listing">
-            <figure class="col-1of3">
+         <div class="col-1of3">
+            <figure class="product-listing">
               <a href="current-item-bike.html">
                 <img src="img/tshirt-falling.png" alt="Pink t-shirt with two falling children on the front.">
               </a>
